# minimap2-arm

./: .gitignore  CMakeLists.txt  README.md  cmakerun.sh  logger.h  main.c
example/: CMakeLists.txt  minimap2_example.c
examples/: init_minimap2_example.c
misc/idxtools/: .gitignore  Makefile  README.md  divide  divide.c  divide_and_index.sh
misc/idxtools/eval/: Mem_usage_with_chr_balance.sh  README.md  chimeric_eval.sh  chimeric_plot.m  comparesam.c  gettime.sh  mem_usage_no_chr_balance.sh  real_get_stat.sh  run_comparesam.sh  synth_eval.sh  synth_plot.m
misc/idxtools/memusage/: no_chr_balance.sh  with_chr_balance.sh
misc/idxtools/tmp/: part0.fa  part1.fa  part10.fa  part11.fa  part12.fa  part13.fa  part14.fa  part15.fa  part16.fa  part17.fa  part18.fa  part19.fa  part2.fa  part20.fa  part21.fa  part22.fa  part23.fa  part3.fa  part4.fa  part5.fa  part6.fa  part7.fa  part8.fa  part9.fa  stat_part0.csv  stat_part1.csv  stat_part10.csv  stat_part11.csv  stat_part12.csv  stat_part13.csv  stat_part14.csv  stat_part15.csv  stat_part16.csv  stat_part17.csv  stat_part18.csv  stat_part19.csv  stat_part2.csv  stat_part20.csv  stat_part21.csv  stat_part22.csv  (+9 more)
misc/idxtools/tmp/exp/: part0.fa  part1.fa  part10.fa  part11.fa  part12.fa  part13.fa  part14.fa  part15.fa  part2.fa  part3.fa  part4.fa  part5.fa  part6.fa  part7.fa  part8.fa  part9.fa  stat.csv  stat_part0.csv  stat_part1.csv  stat_part10.csv  stat_part11.csv  stat_part12.csv  stat_part13.csv  stat_part14.csv  stat_part15.csv  stat_part2.csv  stat_part3.csv  stat_part4.csv  stat_part5.csv  stat_part6.csv  stat_part7.csv  stat_part8.csv  stat_part9.csv
src/: CMakeLists.txt  biscuit.hpp  hit.c  main.c
